@startuml
class edu.pmdm.listascompra.recycler_views.TodasListasViewHolder {
- EditText etNombreLista
- TextView tvFechaCreacion
- ImageButton ibEditarNombre
- ImageButton ibMenuOpciones
- Context contexto
- String nombreOriginal
- ListaCompra listaCompraItem
- OnCambiarNombreListener listenerNombreValido
- OnMenuListasListener listenerMenu
+ void bind(ListaCompra)
- void restaurarNombre()
+ View.OnClickListener getImplOnClickListener()
- View.OnFocusChangeListener getImplOnFocusChangeListener()
+ void setOnCambiarNombreListener(OnCambiarNombreListener)
+ void setOnMenuListasListener(OnMenuListasListener)
}


interface edu.pmdm.listascompra.recycler_views.TodasListasViewHolder$OnCambiarNombreListener {
~ boolean esCambioCorrecto(int,String)
}

interface edu.pmdm.listascompra.recycler_views.TodasListasViewHolder$OnMenuListasListener {
~ void onBotonEditar(int,int)
~ void onBotonBorrar(int,int)
}

class edu.pmdm.listascompra.recycler_views.ContactosViewHolder {
- Context contexto
- int idContacto
- TextView tvNombreContacto
- TextView tvTelefono
+ void bind(Contacto)
}


class edu.pmdm.listascompra.recycler_views.CompartirListasViewHolder {
- Context contexto
- TextView tvNombreLista
- TextView tvFechaCreacion
- CompartirListaAdapter.OnClickItemListener listener
- ListaCompra listaCompra
+ void bind(ListaCompra,CompartirListaAdapter.OnClickItemListener)
+ void setOnItemClickListener(CompartirListaAdapter.OnClickItemListener)
}


class edu.pmdm.listascompra.recycler_views.ProductosViewHolder {
- TextView tvNombre
- CheckBox chkProducto
+ void bind(Producto,Boolean,ProductosAdapter.OnProductoSeleccionadoListener)
}


class edu.pmdm.listascompra.recycler_views.ListaCompraViewHolder {
- TextView tvNombre
- TextView tvDescripcion
- TextView tvPrecio
- ImageView ivImagen
- TextView tvCantidad
- TextView tvUnidad
- Context contexto
- ListaCompraAdapter.onItemListaClickListener listener
+ void bind(ItemLista)
+ void onClick(View)
}




edu.pmdm.listascompra.recycler_views.ViewHolder <|-- edu.pmdm.listascompra.recycler_views.TodasListasViewHolder
edu.pmdm.listascompra.recycler_views.TodasListasViewHolder +.. edu.pmdm.listascompra.recycler_views.TodasListasViewHolder$OnCambiarNombreListener
edu.pmdm.listascompra.recycler_views.TodasListasViewHolder +.. edu.pmdm.listascompra.recycler_views.TodasListasViewHolder$OnMenuListasListener
edu.pmdm.listascompra.recycler_views.ViewHolder <|-- edu.pmdm.listascompra.recycler_views.ContactosViewHolder
edu.pmdm.listascompra.recycler_views.ViewHolder <|-- edu.pmdm.listascompra.recycler_views.CompartirListasViewHolder
edu.pmdm.listascompra.recycler_views.ViewHolder <|-- edu.pmdm.listascompra.recycler_views.ProductosViewHolder
edu.pmdm.listascompra.recycler_views.OnClickListener <|.. edu.pmdm.listascompra.recycler_views.ListaCompraViewHolder
edu.pmdm.listascompra.recycler_views.ViewHolder <|-- edu.pmdm.listascompra.recycler_views.ListaCompraViewHolder
@enduml